# Sentiment_Based_Product_Recommendation_System

./: DEPLOY.md  README.md  app.py  main.py  model.py  pyproject.toml  requirements.txt
models/: data_sentiment.pkl  logreg.pkl  logreg_tuned.pkl  tfidf_vectorizer.pkl  xg_clf.pkl  xg_clf_tuned.pkl
notebook/: sentiment_based_product_recommendation_system.ipynb
templates/: index.html
